[package]
name = "track_forge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5"
axum = { version = "0.8.7", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
jsonwebtoken = "9"
password-hash = "0.5"
rand_core = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
